--- a/Glowberry-Web.csproj
+++ b/Glowberry-Web.csproj
@@ -8,8 +8,8 @@
         <ProjectGuid>{B857E4C4-4AC0-40A6-B50B-589914AE0A36}</ProjectGuid>
         <OutputType>Exe</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
-        <RootNamespace>Glowberry_Web</RootNamespace>
-        <AssemblyName>Glowberry_Web</AssemblyName>
+        <RootNamespace>glowbery-webserver</RootNamespace>
+        <AssemblyName>glowberry</AssemblyName>
         <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
         <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
