--- a/Glowberry-Web.csproj
+++ b/Glowberry-Web.csproj
@@ -71,6 +71,9 @@
     <ItemGroup>
       <WebAppSourceFiles Include="web\app\**\*.*" />
     </ItemGroup>
+    <ItemGroup>
+      <Folder Include="web\app" />
+    </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Target Name="CopyCustomContent" AfterTargets="AfterBuild">
         <Copy SourceFiles="@(WebAppSourceFiles)" DestinationFolder="$(OutputPath)webapp" SkipUnchangedFiles="true" />
