--- a/Glowberry-Web.csproj
+++ b/Glowberry-Web.csproj
@@ -7,7 +7,7 @@
         <ProjectGuid>{B857E4C4-4AC0-40A6-B50B-589914AE0A36}</ProjectGuid>
         <OutputType>Exe</OutputType>
         <AppDesignerFolder>Properties</AppDesignerFolder>
-        <RootNamespace>glowbery</RootNamespace>
+        <RootNamespace>glowberry</RootNamespace>
         <AssemblyName>glowberry-webserver</AssemblyName>
         <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
         <FileAlignment>512</FileAlignment>
@@ -65,28 +65,23 @@
         <Compile Include="attributes\Endpoint.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="web\server\extensions\HttpListenerResponseExtensions.cs" />
-        <Compile Include="web\server\GlowberryAPIGetEndpoints.cs" />
-        <Compile Include="web\server\GlowberryAPIPostEndpoints.cs" />
-        <Compile Include="web\server\GlowberryWebServer.cs" />
+        <Compile Include="webserver\extensions\HttpListenerResponseExtensions.cs" />
+        <Compile Include="webserver\GlowberryAPIGetEndpoints.cs" />
+        <Compile Include="webserver\GlowberryAPIPostEndpoints.cs" />
+        <Compile Include="webserver\GlowberryWebServer.cs" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Open.Nat" Version="2.1.0" />
     </ItemGroup>
     <ItemGroup>
-        <WebAppSourceFiles Include="web\app\**\*.*" />
         <NginxServerFiles Include="nginx\**\*.*">
             <InProject>false</InProject>
         </NginxServerFiles>
         <ScriptFiles Include="scripts\**\*.sql" />
     </ItemGroup>
-    <ItemGroup>
-      <Folder Include="web\app" />
-    </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Target Name="CopyCustomContent" AfterTargets="AfterBuild">
-        <Copy SourceFiles="@(WebAppSourceFiles)" DestinationFolder="$(OutputPath)webapp\%(RecursiveDir)" SkipUnchangedFiles="true" />
         <Copy SourceFiles="@(ScriptFiles)" DestinationFolder="$(OutputPath)scripts" SkipUnchangedFiles="true" />
         <Copy SourceFiles="@(NginxServerFiles)" DestinationFolder="$(OutputPath)nginx\%(RecursiveDir)" SkipUnchangedFiles="true" OverwriteReadOnlyFiles="true" Retries="3" RetryDelayMilliseconds="300" />
     </Target>
