--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -36,21 +36,13 @@ http {
         listen       34557;
         server_name  localhost;
 
-        #charset koi8-r;
+        root site\src;
 
-        #access_log  logs/host.access.log  main;
-
-        root ../webapp;
-        index index.html;
+        error_log .\error_log;
 
         location / {
-            try_files $uri $uri/ =404;
-        }
-
-        error_page  404              ../webapp/error/404.html;
-        error_page   500 502 503 504  ../webapp/error/50x.html;
-        location = /50x.html {
-            root   html;
+            index     index.html index.htm index.php;
+            try_files $uri $uri/ $uri.php $uri.html =404;
         }
 
         location ~ \.php$ {
@@ -59,6 +51,9 @@ http {
             fastcgi_param  SCRIPT_FILENAME $document_root$fastcgi_script_name;
             include        fastcgi_params;
         }
+
+        error_page  404              /error/404.html;
+        error_page  500 502 503 504  /error/50x.html;
     }
 
 
