Reached a stable point in development; XDebug has been added and configuration is needed. Website launches with startup.bat

--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -36,11 +36,17 @@ http {
         listen       34557;
         server_name  localhost;
 
-        root site\src;
+        root site/src;
 
-        error_log .\error_log;
+        error_log ./error_log;
 
         location / {
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization,x-ijt';
+            add_header 'Access-Control-Allow-Credentials' 'true';
+            add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
+
             index     index.html index.htm index.php;
             try_files $uri $uri/ $uri.php $uri.html =404;
         }
