--- a/nginx/php/php.ini
+++ b/nginx/php/php.ini
@@ -975,8 +975,7 @@ extension=zip
 extension=php_curl.dll
 extension=php_mbstring.dll
 extension=php_mysqli.dll
-
-;zend_extension=opcache
+zend_extension=xdebug
 
 ;;;;;;;;;;;;;;;;;;;
 ; Module Settings ;
