--- a/Glowberry-Web.csproj
+++ b/Glowberry-Web.csproj
@@ -82,7 +82,7 @@
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Target Name="CopyCustomContent" AfterTargets="AfterBuild">
-        <Copy SourceFiles="@(ScriptFiles)" DestinationFolder="$(OutputPath)scripts" SkipUnchangedFiles="true" />
+        <Copy SourceFiles="@(ScriptFiles)" DestinationFolder="$(OutputPath)\nginx\site\src\sql" SkipUnchangedFiles="true" />
         <Copy SourceFiles="@(NginxServerFiles)" DestinationFolder="$(OutputPath)nginx\%(RecursiveDir)" SkipUnchangedFiles="true" OverwriteReadOnlyFiles="true" Retries="3" RetryDelayMilliseconds="300" />
     </Target>
     <Target Name="CreateTempDirectory" AfterTargets="AfterBuild">
