--- a/nginx/php/php.ini
+++ b/nginx/php/php.ini
@@ -975,7 +975,13 @@ extension=zip
 extension=php_curl.dll
 extension=php_mbstring.dll
 extension=php_mysqli.dll
+
+[xdebug]
 zend_extension=xdebug
+xdebug.mode=debug
+xdebug.client_host=127.0.0.1
+xdebug.client_port=9000
+
 
 ;;;;;;;;;;;;;;;;;;;
 ; Module Settings ;
