--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -36,7 +36,7 @@ http {
         listen       34557;
         server_name  localhost;
 
-        root site/src;
+        root site;
 
         error_log ./error_log;
 
@@ -48,7 +48,7 @@ http {
             add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
 
             index     index.html index.htm index.php;
-            try_files $uri $uri/ $uri.php $uri.html =404;
+            try_files $uri $uri.php $uri.html =404;
         }
 
         location ~ \.php$ {
