--- a/nginx/conf/nginx.conf
+++ b/nginx/conf/nginx.conf
@@ -36,8 +36,7 @@ http {
         listen       34557;
         server_name  localhost;
 
-        root site;
-
+        root site/;
         error_log ./error_log;
 
         location / {
@@ -47,7 +46,7 @@ http {
             add_header 'Access-Control-Allow-Credentials' 'true';
             add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range';
 
-            index     index.html index.htm index.php;
+            index index.html index.htm index.php;
             try_files $uri $uri.php $uri.html =404;
         }
 
